[gd_scene load_steps=26 format=2]

[ext_resource path="res://Shaders/GlitchSprite/SpriteGlitch.shader" type="Shader" id=1]
[ext_resource path="res://UI/Shop/K33p3erProfilePic.png" type="Texture" id=2]
[ext_resource path="res://UI/Shop/ShopUI.png" type="Texture" id=3]
[ext_resource path="res://UI/Shop/K33p3erProfilePic.gd" type="Script" id=4]
[ext_resource path="res://UI/Shop/DoneButton_2x1.png" type="Texture" id=5]
[ext_resource path="res://UI/Windows/WindowButton.gd" type="Script" id=6]
[ext_resource path="res://UI/Shop/Shop.gd" type="Script" id=7]
[ext_resource path="res://UI/Shop/Messages.gd" type="Script" id=8]
[ext_resource path="res://UI/Shop/Abilities.gd" type="Script" id=9]
[ext_resource path="res://UI/Windows/WindowAppear.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/Backdrop.gd" type="Script" id=11]
[ext_resource path="res://Abilities/ExtraTurn.tscn" type="PackedScene" id=12]
[ext_resource path="res://Abilities/Square.tscn" type="PackedScene" id=13]
[ext_resource path="res://Abilities/ClearRow.tscn" type="PackedScene" id=14]
[ext_resource path="res://Abilities/WallsToCD.tscn" type="PackedScene" id=15]
[ext_resource path="res://Abilities/ClearColumn.tscn" type="PackedScene" id=16]
[ext_resource path="res://Abilities/Plus.tscn" type="PackedScene" id=17]
[ext_resource path="res://Abilities/XAbility.tscn" type="PackedScene" id=18]
[ext_resource path="res://Abilities/FullPlus.tscn" type="PackedScene" id=19]
[ext_resource path="res://sfx/Equip_Power_Up.ogg" type="AudioStream" id=20]
[ext_resource path="res://sfx/Reboot_Ranger_SFX.ogg" type="AudioStream" id=21]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 1 )
shader_param/time = 0.0
shader_param/strength = 0.5
shader_param/jitter_offset = 6.0
shader_param/color_strength = 0.1

[sub_resource type="Animation" id=5]
resource_name = "Click"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 97.7272, 159.795 )

[node name="Shop" type="Node2D"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 404.722
margin_top = 167.0
margin_right = 1506.72
margin_bottom = 900.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="K33p3erProfilePic" type="Sprite" parent="."]
material = SubResource( 8 )
position = Vector2( 523.637, 402.545 )
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="ShopUI" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 3 )

[node name="DoneButton" type="Area2D" parent="."]
position = Vector2( 1409.55, 741.93 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="DoneButton"]
texture = ExtResource( 5 )
hframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="DoneButton"]
autoplay = "Idle"
anims/Click = SubResource( 5 )
anims/Idle = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoneButton"]
visible = false
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Messages" type="Node2D" parent="."]
position = Vector2( 668.656, 249.314 )
script = ExtResource( 8 )

[node name="Abilities" type="Node2D" parent="."]
position = Vector2( 547.721, 712.571 )
script = ExtResource( 9 )
ability_pool = [ ExtResource( 16 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 19 ), ExtResource( 18 ) ]

[node name="WindowAppear" parent="." instance=ExtResource( 10 )]

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="EquipSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -5.0

[node name="RebootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
